--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-SupportingFiles/
-MySqlPw.txt
+# Created By: Souvik Shome #
+
+# Log file #
+*.log
+
+# Package Files #
 *.jar
 *.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Directory #
+SupportingFiles/
+
+# Specific Files #
+MySqlPw.txt
